Extract into 'java-preview-features' sub-project